Updated Index.html with my goal for the next year !

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<div>Hola Amigo</div>
-<p>World !</p>
-<p>World !</p>
-<p>World !</p>
-<p>World !</p>
-
-
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, aspernatur!</p>
+<h1>My first Website</h1>
+<h2>DREAM land a job @ FAANG Company </h2>
+<h2>50+ LPA</h2>
+<p>I Can Do it and i will do it</p>
