--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>My first Website</h1>
-<h2>DREAM land a job @ FAANG Company </h2>
+<h2>DREAM land a job @ FAANG Company</h2>
 <h2>50+ LPA</h2>
 <p>I Can Do it and i will do it</p>
+<p>I WIll mak eit happen !</p>
