Added Some Code in index.html file

--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
-<h1>My first Website</h1>
-<h2>DREAM land a job @ FAANG Company</h2>
-<h2>50+ LPA</h2>
-<p>I Can Do it and i will do it</p>
-<p>I WIll mak eit happen !</p>
-<div>Hola Amigo</div>
-<p>World !</p>
-<p>World !</p>
-<p>World !</p>
-<p>World !</p>
-
-
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas, aspernatur!</p>
-
-
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eveniet sunt
+  aliquam sint aut dignissimos, neque optio inventore consequuntur animi.
+</p>
+<h1>Lorem ipsum dolor sit.</h1>
